[package]
name = "hue_persistence"
version = "0.2.1"
authors = ["Joost Yervante Damad <joost@damad.be>"]
license = "MIT/Apache-2.0"
description = "Hue persistence for Philips Hue lights"
documentation = "https://github.com/andete/hue_persistence"
homepage = "https://github.com/andete/hue_persistence"
repository = "https://github.com/andete/hue_persistence"
readme = "README.md"
keywords = ["philips","hue","light","bulb","automation"]

[dependencies.philipshue]
version = "0.1"
features = ["ssdp","unstable"]
default-features = false

[dependencies]
ssdp = "0.5.0"
syslog = "3.2"
log = "0.3"
error-chain = "0.7"

# requires nightly rust to build due to philipshue/ssdp requiring it

[replace]
#"ssdp:0.4.0" = { git = "https://github.com/andete/ssdp-rs.git", branch = "error_chain_compat" }
"philipshue:0.1.0" = { git = "https://github.com/andete/philipshue.git", branch = "error_chain_compat" }
