[package]
name = "hue_persistence"
version = "0.2.2"
authors = ["Joost Yervante Damad <joost@damad.be>"]
license = "MIT/Apache-2.0"
description = "Hue persistence for Philips Hue lights"
documentation = "https://docs.rs/crate/hue_persistence"
homepage = "https://github.com/andete/hue_persistence"
repository = "https://github.com/andete/hue_persistence"
readme = "README.md"
keywords = ["philips","hue","light","bulb","automation"]

[dependencies.philipshue]
version = "0.2"
features = ["ssdp","unstable"]
default-features = false

[dependencies]
ssdp = "0.5.0"
syslog = "3.2"
log = "0.3"
error-chain = "0.7"
argparse = "0.2"
env_logger = "0.3"

# requires nightly rust to build due to philipshue/ssdp requiring it
