[package]
name = "hue_persistence"
version = "0.2.5"
authors = ["Joost Yervante Damad <joost@damad.be>"]
license = "MIT/Apache-2.0"
description = "Hue persistence for Philips Hue lights"
documentation = "https://docs.rs/crate/hue_persistence"
homepage = "https://github.com/andete/hue_persistence"
repository = "https://github.com/andete/hue_persistence"
readme = "README.md"
keywords = ["philips","hue","light","bulb","automation"]

[dependencies.philipshue]
# path = "../philipshue"
git = "https://github.com/andete/philipshue"
branch = "hyper_0.11"
# version = "0.3"
features = ["ssdp","unstable"]
default-features = false

[dependencies]
ssdp = "0.6"
syslog = "3.2"
log = "0.3"
error-chain = "0.10"
env_logger = "0.3"
clap = "2.20"
futures = "0.1"
tokio-timer = "0.1"

# requires nightly rust to build due to philipshue/ssdp requiring it
